--- a/index.html
+++ b/index.html
@@ -262,13 +262,25 @@
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-2">URL Logo Kiri (Opsional)</label>
                                 <input type="url" id="logo1Url" placeholder="https://example.com/logo1.png" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-transparent">
-                                <p class="text-xs text-gray-500 mt-1">Logo akan ditampilkan di kiri atas</p>
+                                <p class="text-xs text-gray-500 mt-1">Logo akan ditampilkan di kiri atas. Gunakan URL gambar yang dapat diakses publik (PNG/JPG)</p>
                             </div>
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-2">URL Logo Kanan (Opsional)</label>
                                 <input type="url" id="logo2Url" placeholder="https://example.com/logo2.png" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-transparent">
-                                <p class="text-xs text-gray-500 mt-1">Logo akan ditampilkan di kanan atas</p>
+                                <p class="text-xs text-gray-500 mt-1">Logo akan ditampilkan di kanan atas. Gunakan URL gambar yang dapat diakses publik (PNG/JPG)</p>
                             </div>
+                        </div>
+
+                        <!-- Logo Troubleshooting Info -->
+                        <div class="bg-amber-50 p-4 rounded-lg">
+                            <h4 class="font-semibold text-amber-800 mb-2">💡 Tips untuk Logo:</h4>
+                            <ul class="text-sm text-amber-700 space-y-1 list-disc list-inside">
+                                <li>Gunakan URL gambar yang dapat diakses publik (tidak memerlukan login)</li>
+                                <li>Format yang didukung: PNG, JPG, JPEG</li>
+                                <li>Ukuran optimal: 200x200 pixel atau lebih kecil</li>
+                                <li>Contoh layanan hosting gambar gratis: <a href="https://imgur.com" target="_blank" class="underline">Imgur</a>, <a href="https://postimg.cc" target="_blank" class="underline">PostImg</a></li>
+                                <li>Jika logo tidak muncul, periksa URL dapat dibuka di browser</li>
+                            </ul>
                         </div>
 
                         <!-- Preview Info -->
@@ -2501,5 +2513,5 @@ ORDER BY md.date DESC;</code></pre>
             showSuccessMessage('PDF berhasil diexport!');
         }
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'98ee76c5f707a396',t:'MTc2MDUyMjM2OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'98ee8af736584ac1',t:'MTc2MDUyMzE5Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
